# wmforecast

./: .gitignore  .travis.yml  AUTHORS  CNAME  ChangeLog  Gemfile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  TODO  _config.yml  autogen.sh  config.h.in  configure  configure.ac  index.html  index.md  org.friedcheese.wmforecast.metainfo.xml  params.json  wmforecast.1  wmforecast.1.in  wmforecast.c  wmforecast.desktop
.github/workflows/: build.yml  website.yml
_sass/: _base.scss  _syntax-highlighting.scss
css/: main.scss
debian/: changelog  control  copyright  gbp.conf  menu  rules  salsa-ci.yml  watch
debian/patches/: find-changelog.patch  series
debian/source/: options
debian/tests/: control
debian/upstream/: metadata  signing-key.asc
icons/: Makefile.am  Makefile.in
src/: wmforecast.c
website/: _config.yml  index.md
