dist_pkgdata_DATA = dialog-error.png \
	weather-clear-night.png \
	weather-clear.png \
	weather-few-clouds-night.png \
	weather-few-clouds.png \
	weather-fog.png \
	weather-overcast.png \
	weather-showers.png \
	weather-snow.png \
	weather-storm.png

icons48x48dir = $(datadir)/icons/hicolor/48x48/apps
dist_icons48x48_DATA = wmforecast.png

iconsscalabledir = $(datadir)/icons/hicolor/scalable/apps
dist_iconsscalable_DATA = wmforecast.svg
